--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </section>
 
     <footer>
-      <span>Created By <span class="developer-name">Om patil</span> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+      <span>Created By <a href="https://www.linkedin.com/in/om-patil-587a82274" target="_blank">Om patil</a> | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
   </footer>
 
     <script>
